@@ -1,118 +1,71 @@
 package com.naval.store.controller;
 
+import com.naval.store.dtos.apiResponse.ApiResponse;
 import com.naval.store.dtos.products.CreateProductRequest;
 import com.naval.store.dtos.products.ProductDto;
-import com.naval.store.entities.Product;
 import com.naval.store.mappers.ProductMapper;
-import com.naval.store.repositories.CategoryRepository;
-import com.naval.store.repositories.ProductRepository;
+import com.naval.store.services.ProductService;
+import com.naval.store.utils.ResponseUtils;
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
-import org.springframework.data.domain.Sort;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @RestController
 @RequestMapping("/products")
 public class ProductController {
-    private ProductRepository productRepository;
+    private final ProductService productService;
     private final ProductMapper productMapper;
-    private final CategoryRepository categoryRepository;
+    private final ResponseUtils responseUtils;
 
     @GetMapping
-    Iterable<ProductDto> getProducts(
+    public ResponseEntity<ApiResponse<List<ProductDto>>> getProducts(
             @RequestParam(name = "sort", defaultValue = "", required = false) String sort,
             @RequestParam(name = "categoryId", required = false) Byte categoryId
     ) {
-        List<Product> data;
-        if (!Set.of("name", "id", "price").contains(sort)) {
-            sort = "name";
-        }
-
-        if (categoryId != null) {
-            data = productRepository.findProductByCategoryId(categoryId, Sort.by(sort));
-        } else {
-            data = productRepository.findProductWithCategory(Sort.by(sort)).stream().toList();
-        }
-
-        return data.stream().map(productMapper::toDto).collect(Collectors.toList());
+        var data = productService.getProducts(sort, categoryId);
+        var products = data.stream().map(productMapper::toDto).collect(Collectors.toList());
+        return responseUtils.ok(products);
     }
 
     @GetMapping("/{id}")
-    ResponseEntity<ProductDto> getProduct(@PathVariable Long id) {
-        var data = productRepository.findById(id).orElse(null);
-
-        if (data == null) {
-            return ResponseEntity.notFound().build();
-        }
-
-        return ResponseEntity.ok(productMapper.toDto(data));
+    public ResponseEntity<ApiResponse<ProductDto>> getProduct(@PathVariable Long id) {
+        var product = productService.getProductById(id);
+        return responseUtils.ok(productMapper.toDto(product));
     }
 
     @PostMapping
-    public ResponseEntity<ProductDto> createProduct(
+    public ResponseEntity<ApiResponse<ProductDto>> createProduct(
             @RequestBody @Valid CreateProductRequest request,
             UriComponentsBuilder uriBuilder
     ) {
-        var category = categoryRepository.findById(request.getCategoryId()).orElse(null);
-
-        if (category == null) {
-            return ResponseEntity.badRequest().build();
-        }
-        var data = productMapper.toProduct(request);
-        data.setCategory(category);
-
-        var newProduct = productRepository.save(data);
-
+        var newProduct = productService.createProduct(request);
         var productDto = productMapper.toDto(newProduct);
-        var uri = uriBuilder.path("/users/{id}").buildAndExpand(productDto.getId()).toUri();
+        var uri = uriBuilder.path("/products/{id}").buildAndExpand(productDto.getId()).toUri();
 
-        return ResponseEntity.created(uri).body(productDto);
+        return responseUtils.ok(productDto, HttpStatus.CREATED, uri);
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<ProductDto> updateProduct(
+    public ResponseEntity<ApiResponse<ProductDto>> updateProduct(
             @RequestBody ProductDto request,
             @PathVariable Long id
     ) {
-        var productFound = productRepository.findById(id).orElse(null);
-        if (productFound == null) {
-            return ResponseEntity.notFound().build();
-        }
-
-        if (request.getCategoryId() != null) {
-            var category = categoryRepository.findById(request.getCategoryId()).orElse(null);
-            if (category == null) {
-                return ResponseEntity.badRequest().build();
-            }
-            productFound.setCategory(category);
-        }
-
-
-        productMapper.requestToProduct(request, productFound);
-        productRepository.save(productFound);
-
-        return ResponseEntity.ok(productMapper.toDto(productFound));
+        var updatedProduct = productService.updateProduct(id, request);
+        return responseUtils.ok(productMapper.toDto(updatedProduct));
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteProduct(
+    public ResponseEntity<ApiResponse<Void>> deleteProduct(
             @PathVariable Long id
     ) {
-        var data = productRepository.findById(id).orElse(null);
-
-        if (data == null) {
-            return ResponseEntity.notFound().build();
-        }
-
-        productRepository.delete(data);
-
-        return ResponseEntity.noContent().build();
+        productService.deleteProduct(id);
+        return responseUtils.ok(null, HttpStatus.NO_CONTENT, null);
     }
 }
